# MusicPilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_EN.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260614_0001_initial_schema.py  20260624_0002_playlist_management.py  20260714_0012_add_indexer_site_auth.py
config/: sites.parser.yaml
docs/: configuration.en.md  configuration.md
docs/superpowers/specs/: 2026-06-24-playlist-management-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  style.css
musicpilot/: __init__.py  __main__.py
musicpilot/adapters/bots/: __init__.py  null.py  telegram.py
musicpilot/adapters/downloaders/: __init__.py  qbittorrent.py
musicpilot/adapters/indexers/: __init__.py  config.py  mteam.py  nexusphp.py
musicpilot/adapters/media_servers/: __init__.py  navidrome.py
musicpilot/adapters/metadata/: __init__.py  multi_source.py  musicbrainz.py  (+1 more)
musicpilot/core/: __init__.py  artist.py  event_bus.py  events.py  library.py  metadata.py  pipeline.py  processor.py  scraping.py  task_queue.py
musicpilot/infra/: auth.py  config.py  config_store.py  scheduler.py
musicpilot/ports/: __init__.py  bot.py  downloader.py  indexer.py  media_server.py  metadata.py  notifier.py  repository.py  tag_writer.py
tests/: test_connection_checks.py  test_event_bus.py  test_indexer_config.py  test_library.py  test_metadata.py  test_nexusphp_parser.py  test_pipeline.py  test_processor.py  test_site_parser_support.py
(+12 files in other folders)
