[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicpilot"
version = "1.0.1"
description = "Self-hosted async music automation hub."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "httpx[http2]>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "mutagen>=1.47",
  "apscheduler>=3.10",
  "aiogram>=3.10",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
musicpilot = "musicpilot.__main__:main"

[tool.setuptools.packages.find]
include = ["musicpilot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_subclassing_any = false
